Closed Bug 1776896 Opened 2 years ago Closed 2 years ago

Intermittent dom/html/test/test_input_lastInteractiveValue.html | Default value is not interactive - got "Tested", expected ""

Categories

(Toolkit :: Password Manager, defect, P5)

defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox102 --- unaffected
firefox103 --- unaffected
firefox104 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: emilio)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=382772074&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/OzRvwC7-TIKbqNBRt6Sxjw/runs/0/artifacts/public/logs/live_backing.log


INFO -  TEST-PASS | dom/html/test/test_input_lastInteractiveValue.html | .defaultValue affects .value
[task 2022-06-28T15:32:16.578Z] 15:32:16     INFO -  Buffered messages finished
[task 2022-06-28T15:32:16.578Z] 15:32:16  WARNING -  TEST-UNEXPECTED-FAIL | dom/html/test/test_input_lastInteractiveValue.html | Default value is not interactive - got "Tested", expected ""
[task 2022-06-28T15:32:16.579Z] 15:32:16     INFO -      SimpleTest.is@SimpleTest/SimpleTest.js:500:14
[task 2022-06-28T15:32:16.579Z] 15:32:16     INFO -      test_default_value@dom/html/test/test_input_lastInteractiveValue.html:44:5
[task 2022-06-28T15:32:16.579Z] 15:32:16     INFO -      nextTick/<@SimpleTest/SimpleTest.js:2106:34
[task 2022-06-28T15:32:16.579Z] 15:32:16     INFO -  TEST-PASS | dom/html/test/test_input_lastInteractiveValue.html | After interaction with default value

:serg, since you are the author of the regressor, bug 1771806, could you take a look?
For more information, please visit auto_nag documentation.

Flags: needinfo?(sgalich)
Flags: needinfo?(sgalich) → needinfo?(emilio)
Assignee: nobody → emilio
Flags: needinfo?(emilio)
Blocks: 1776909
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e0677157e58c
Clear mLastInteractiveValue when releasing TextControlState objects.
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch

Set release status flags based on info from the regressing bug 1771806

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: