Bug 1776896 - Clear mLastInteractiveValue when releasing TextControlState objects.

Differential Revision: https://phabricator.services.mozilla.com/D150487